--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Lucas Rafael Ferraz/title>
+		<title>Lucas Rafael Ferraz</title>
 	</head>
 	<body>
 		<nav>
