--- a/index.html
+++ b/index.html
@@ -6,3 +6,8 @@ title: Lucas Rafael Ferraz
 	<h1>Ah, falo sobre mim aqui?</h1>
 	<p>Tá, eu sou um engenheiro de computação que gosta de escrever e se meter em projetos de literatura de fantasia e ficção científica! <a href="/about">Mais sobre mim...</a></p>
 </div><!-- /.blurb -->
+
+<div class="publicacoes">
+	<h1>Publicações</h1>
+	<p>Aqui vou colocar uma lista de coisas que publiquei poraí.</p>
+</div>
