--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@ title: Lucas Rafael Ferraz
 
 <div class="publicacoes">
 	<h1>Publicações</h1>
-	<p>Aqui vou colocar uma lista de coisas que publiquei poraí.</p>
+	<p>Aqui vou colocar uma lista de coisas que publiquei poraí!</p>
 </div>
