--- a/index.html
+++ b/index.html
@@ -10,4 +10,4 @@ title: Lucas Rafael Ferraz
 <div class="publicacoes">
 	<h1>Publicações</h1>
 	<p>Aqui vou colocar uma lista de coisas que publiquei poraí!</p>
-</div>
+</div><!-- /.publicacoes -->
