--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@ title: Lucas Rafael Ferraz
 	<p>Tá, eu sou um engenheiro de computação que gosta de escrever e se meter em projetos de literatura de fantasia e ficção científica! <a href="/about">Mais sobre mim...</a></p>
 </div><!-- /.blurb -->
 
+<div id="mydiv" style="width:200px;background:white" onmouseover="this.style.background='gray';" onmouseout="this.style.background='white';">
+    Jack and Jill went up the hill 
+    To fetch a pail of water. 
+    Jack fell down and broke his crown, 
+    And Jill came tumbling after. 
+    </div>
+
 <div class="body.publicacoes">
 	<h1>Publicações</h1>
 	<p>Aqui vou colocar uma lista de coisas que publiquei poraí!</p>
