--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Lucas Rafael Ferraz
 	<p>Tá, eu sou um engenheiro de computação que gosta de escrever e se meter em projetos de literatura de fantasia e ficção científica! <a href="/about">Mais sobre mim...</a></p>
 </div><!-- /.blurb -->
 
-<div id="publicacoes" style="width:200px;background:white" onmouseover="this.style.background='gray';" onmouseout="this.style.background='white';">
+<div id="publicacoes" style="background:green" onmouseover="this.style.background='gray';" onmouseout="this.style.background='white';">
 	<h1>Publicações</h1>
 	<p>Aqui vou colocar uma lista de coisas que publiquei poraí!</p>
 </div><!-- /.publicacoes -->
